- add favico - fix picture spacing - add disclaimer - adjust title spacing for small screens

--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,7 @@ aside {
   }
 
   .title-blurb {
-    padding: 0 0 2rem 0;
+    padding: 0;
     text-align: left;
     color: #212529;
     font-size: 1rem;
